--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "react-js",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.jsx\" --fix",
+    "format": "prettier --write \"src/**/*.jsx\" \"test/**/*.jsx\""
   },
   "dependencies": {
     "antd": "^5.3.2",
@@ -24,12 +26,15 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "eslint": "^8.36.0",
+    "eslint-plugin-react": "^7.32.2",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
+    "prettier": "^2.8.7",
     "vite": "^4.2.0"
   },
   "lint-staged": {
-    "*.ts": [
+    "*.jsx, *.ts": [
       "npm run lint",
       "npm run format",
       "git add ."
