--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "postinstall": "husky install",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.jsx\" --fix",
-    "format": "prettier --write \"src/**/*.jsx\" \"test/**/*.jsx\""
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,scss}\"",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix"
   },
   "dependencies": {
     "antd": "^5.3.2",
@@ -34,9 +34,9 @@
     "vite": "^4.2.0"
   },
   "lint-staged": {
-    "*.jsx, *.ts": [
-      "npm run lint",
-      "npm run format",
+    "*.{js,jsx,ts,tsx}": [
+      "yarn lint",
+      "yarn format",
       "git add ."
     ]
   }
