--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
     "semi": ["error", "always"],
-    "react/jsx-uses-vars": "error"
+    "react/jsx-uses-vars": "error",
+    "linebreak-style": ["error",  "windows"]
   }
 }
