--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-js",
   "private": true,
-  "version": "0.0.0",
+  "version": "0n.0.0",
   "type": "commonjs",
   "scripts": {
     "dev": "vite",
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "antd": "^5.3.2",
+    "aos": "^2.3.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -31,7 +32,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.7",
-    "vite": "^4.2.0"
+    "vite": "^4.2.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
