--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
       "experimentalObjectRestSpread": true,
       "jsx": true
     },
+    "ecmaVersion": "latest",
     "sourceType": "module"
   },
   "plugins": ["react"],
