--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.28.0",
     "antd": "^5.3.2",
+    "aos": "^2.3.4",
+    "axios": "^1.3.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
