--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   },
   "dependencies": {
     "antd": "^5.3.2",
+    "aos": "^2.3.4",
+    "axios": "^1.3.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.9.0",
     "sort-by": "^1.2.0"
   },
@@ -31,7 +34,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.7",
-    "vite": "^4.2.0"
+    "vite": "^4.2.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
