--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.28.0",
+    "@tanstack/react-query-devtools": "^4.28.0",
     "antd": "^5.3.2",
-    "aos": "^2.3.4",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.3.4",
+    "json-server": "^0.17.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "owl.carousel": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.9.0",
-    "sort-by": "^1.2.0"
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.5.0",
