--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "antd": "^5.3.2",
+    "axios": "^1.3.4",
+    "bootstrap-icons": "^1.10.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -31,7 +34,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.7",
-    "vite": "^4.2.0"
+    "vite": "^4.2.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
