--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "antd": "^5.3.2",
     "axios": "^1.3.4",
     "bootstrap-icons": "^1.10.3",
+    "dotenv": "^16.0.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.9.0",
     "sort-by": "^1.2.0"
   },
