--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.28.0",
-    "@tanstack/react-query-devtools": "^4.28.0",
+    "@ant-design/icons": "^5.0.1",
     "antd": "^5.3.2",
-    "aos": "^3.0.0-beta.6",
+    "aos": "^2.3.4",
     "axios": "^1.3.4",
-    "json-server": "^0.17.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "owl.carousel": "^2.3.4",
