--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@tanstack/react-query": "^4.28.0",
+    "@tanstack/react-query-devtools": "^4.28.0",
     "antd": "^5.3.2",
     "aos": "^2.3.4",
     "axios": "^1.3.4",
+    "json-server": "^0.17.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "owl.carousel": "^2.3.4",
