--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "antd": "^5.3.2",
-    "aos": "^2.3.4",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.3.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
