--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
     "preview": "vite preview",
     "postinstall": "husky install",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,scss}\"",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix"
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix",
+    "serve-json": "json-server --watch db.json"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.11.11",
     "antd": "^5.3.2",
+    "boostrap": "^2.0.0",
+    "json-server": "^0.17.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "material-icons": "^1.13.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-iframe": "^1.8.5",
     "react-router-dom": "^6.9.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.5.0",
@@ -31,7 +38,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.7",
-    "vite": "^4.2.0"
+    "vite": "^4.2.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
