--- a/package.json
+++ b/package.json
@@ -2,28 +2,21 @@
   "name": "react-js",
   "private": true,
   "version": "0.0.0",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "postinstall": "husky install",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,scss}\"",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix"
+    "postinstall": "husky install"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.0.1",
     "antd": "^5.3.2",
-    "aos": "^3.0.0-beta.6",
-    "axios": "^1.3.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.3",
     "react-router-dom": "^6.9.0",
-    "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.5.0",
@@ -31,17 +24,14 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
-    "eslint": "^8.36.0",
-    "eslint-plugin-react": "^7.32.2",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
-    "prettier": "^2.8.7",
-    "vite": "^4.2.1"
+    "vite": "^4.2.0"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "yarn lint",
-      "yarn format",
+    "*.ts": [
+      "npm run lint",
+      "npm run format",
       "git add ."
     ]
   }
